--- a/static/css/quote.html
+++ b/static/css/quote.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Set Medic South Africa Logo">
+            <img src="{{ url_for('static', filename='img/logo.png') }}" alt="Set Medic South Africa Logo">
         </div>
         <nav>
             <ul>
