--- a/static/css/quote.html
+++ b/static/css/quote.html
@@ -40,18 +40,19 @@
                 <button type="submit">Submit</button>
             </form>
             {% with messages = get_flashed_messages(with_categories=true) %}
-                {% if messages %}
-                    <ul>
-                        {% for category, message in messages %}
-                            <li class="{{ category }}">{{ message }}</li>
-                        {% endfor %}
-                    </ul>
-                {% endif %}
+            {% if messages %}
+            <ul>
+                {% for category, message in messages %}
+                <li class="{{ category }}">{{ message }}</li>
+                {% endfor %}
+            </ul>
+            {% endif %}
             {% endwith %}
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 Set Medic South Africa. All rights reserved.</p>
+        <p>© 2025 Set Medic South Africa. All rights reserved.</p>
     </footer>
 </body>
 </html>
+
