--- a/static/css/index.html
+++ b/static/css/index.html
@@ -13,8 +13,7 @@
             <img src="logo.png" alt="Set Medic South Africa Logo">
         </div>
         <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
+                           <li><a href="#home">Home</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#quote">Request a Quote</a></li>
                 <li><a href="#blog">Blog</a></li>
@@ -65,7 +64,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 Set Medic South Africa. All rights reserved.</p>
+        <p>© 2025 Set Medic South Africa. All rights reserved.</p>
     </footer>
 </body>
 </html>
